--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,56 @@ label {
 label input {
     margin-left: 15px;
 }
+
+body {
+    font-family:Helvetica;
+    background-color: #fdfdfd;
+    padding: 20px;
+}
+
+header {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+h1 {
+    color: #006492;
+}
+
+section {
+    margin-bottom: 30px;
+    
+}
+
+
+h2 {
+    margin-bottom: 10px;
+    color: #006492;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: right;
+    width: 80%;
+}
+
+button {
+    padding: 16px 32px;
+    background-color: #81ff85;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+table {
+    width: 99%;
+    border-collapse: bold;
+}
