--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,12 +40,6 @@ section {
     height: 30vh;
 }
 
-#section3 {
-    margin-bottom: 30px;
-    margin-top: 0px;
-    height: 20vh;
-}
-
 h2 {
     margin-bottom: 10px;
     color: #006492;
@@ -96,4 +90,45 @@ table {
     border-collapse: bold;
     border: solid;
     color: black;
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5); 
+    overflow: auto; 
+}
+
+.conteudo_do_modal {
+    background-color: #fefefe;
+    margin: 20px auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; 
+    border-radius: 15px;
+}
+
+.fechar {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.fechar:hover,
+.fechar:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+footer {
+    position: relative;
+    top: 20px;
+    height: 10vh;
 }
