Gustavo commit | Finalizado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ p {
 button {
     padding: 16px 32px;
     background-color: #027db6;
+    margin-left: 10px;
     color: #FFFFFF;
     border: 2px solid black;
     border-radius: 4px;
